--- a/dior702-main/dior701-main/docs/css/main.css
+++ b/dior702-main/dior701-main/docs/css/main.css
@@ -83,7 +83,7 @@ p, li {
 .yellow2 {
     /* background-color: #FFAE00; */
     /* background-color:rgba(21,80,95,0) ; */
-    color: lightgray;
+    color: orange;
     
 }
 .df {
